 <resources>
    
    <string name="facebook_app_id">520732277993049</string>

    <string name="app_name">VQCSDK</string>
    
    <!-- Login -->
    <string name="login_uppercase">ĐĂNG NHẬP</string>
    <string name="login_with_sologame">Đăng nhập với SoloGame ID</string>
    <string name="login_with_facebook">Đăng nhập bằng Facebook</string>
    <string name="login_with_google">Đăng nhập bằng Google+</string>
    <string name="login_register">ĐĂNG KÝ</string>
    <string name="register_account">Đăng kí tài khoản</string>
    
    <string name="login_username">Tài khoản</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_forget_password">Quên mật khẩu ?</string>
    
    <string name="password_register_hint">Tối thiểu 6 ký tự bao gồm cả chữ và số</string>
    <string name="password_repeat">Lặp lại mật khẩu</string>
    
    <string name="please_fill_up_info">Vui lòng nhập đủ thông tin</string>
    <string name="password_not_match">Mật khẩu chưa giống nhau</string>
    <string name="username_is_too_short">Username không được nhỏ hơn 6 kí tự</string>
    <string name="username_is_too_long">Username không được lớn hơn 30 kí tự</string>
    <string name="username_contains_space">Username không được chứa dấu cách</string>
    <string name="password_contains_space">Mật khẩu không được chứa dấu cách</string>
    
    <string name="welcome_back">Xin chào, </string>
    
    
    <!-- Dashboard -->
    <string name="dashboard">Trung tâm hỗ trợ khách hàng</string>
    <string name="dashboard_home">Trang chủ</string>
    <string name="dashboard_fb_group">Cộng đồng</string>
    <string name="dashboard_help">Hướng dẫn</string>
    <string name="dashboard_report">Báo lỗi</string>
    <string name="dashboard_account">Tài khoản</string>
    <string name="dashboard_update_account">Cập nhập tài khoản</string>
    <string name="dashboard_inbox">Hòm thư</string>
    <string name="dashboard_logout">ĐĂNG XUẤT</string>
    
    <string name="tab_account">Tài khoản cá nhân</string>
    <string name="tab_account_update">Cập nhập</string>
    <string name="tab_account_username">Tài khoản</string>
    <string name="tab_account_email">Email</string>
    <string name="tab_account_fullname">Họ tên</string>
    <string name="tab_account_birthday">Ngày sinh</string>
    <string name="tab_account_address">Địa chỉ</string>
    <string name="tab_account_cardno">Số CMT</string>
    <string name="tab_account_phonenumber">Số điện thoại</string>
    <string name="tab_account_fpay">Ví tiền (VNĐ)</string>
    
    <string name="tab_account_password">Mật khẩu</string>
    
    <string name="tab_addmoney_history">Lịch sử giao dịch</string>
    <string name="tab_addmoney_history_date">Ngày/giờ</string>
    <string name="tab_addmoney_history_game">Game nạp</string>
    <string name="tab_addmoney_history_type">Hình thức nạp</string>
    <string name="tab_addmoney_history_description">Mô tả</string>
    
    <string name="dashboard_addmoney">Nạp tiền</string>
    <string name="dashboard_addmoney_telco">Chọn loại thẻ</string>
    <string name="dashboard_addmoney_pin">Mã thẻ cào</string>
    <string name="dashboard_addmoney_serial">Số serial</string>
    <string name="dashboard_addmoney_confirm">NẠP THẺ</string>
    <string name="dashboard_addmoney_successful">Nạp thành công</string>
    
    
    <!-- Payment -->
    <string name="payment">Ví tiền (? VNĐ)</string>
    <string name="product_name">Sản phẩm</string>
    <string name="product_price">Giá</string>
    <string name="product_quantity">Số lượng</string>
    <string name="product_buy">Mua</string>
    <string name="product_thanhtoan">Thanh toán</string>
    <string name="product_naptien">Nạp tiền</string>
    
    <string name="buy_confirm">Bạn có muốn mua s0 sản phẩm s1 với giá s2/sản phẩm?</string>
    <string name="buy_confirm_yes">Mua</string>
    <string name="buy_confirm_no">Không</string>
    
    
    <!-- Forgot password -->
    <string name="forgot_password">Quên mật khẩu</string>
    
    <!-- Other -->
    <string name="error_api_check_network">Lỗi load dữ liệu. Vui lòng kiểm tra kết nối mạng</string>
    <string name="logout_successful">Bạn đã đăng xuất thành công</string>
    <string name="subject">Báo lỗi game: </string>
    <string name="send_email_by">Gửi email bằng</string>
    <string name="reload">Reload</string>
    
    
    
    

</resources>
