<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/login_username"
            android:textColor="#cd422b"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:hint="@string/login_username"
            android:paddingLeft="10dp"
            android:textSize="14dp"
            android:singleLine="true"
            android:id="@+id/et_register_username"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/login_password"
            android:textColor="#cd422b"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:hint="@string/password_register_hint"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="14dp"
            android:inputType="textPassword" 
            android:id="@+id/et_register_password"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/password_repeat"
            android:textColor="#cd422b"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:hint="@string/password_repeat"
            android:paddingLeft="10dp"
            android:textSize="14dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:id="@+id/et_register_password_2"
            />
    </LinearLayout>    


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_login_button"
        android:text="@string/login_register"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" 
        android:layout_marginTop="10dp"
        android:id="@+id/btn_register"
        />

</LinearLayout>