<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cd422b" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/payment"
            android:textColor="#FFF"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6" 
        android:gravity="center"
        >
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:textColor="#cd422b"
            android:gravity="center" 
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:text="@string/product_price"
            android:textStyle="bold"
            android:textColor="#cd422b"
            android:gravity="center" 
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/product_quantity"
            android:textStyle="bold"
            android:textColor="#cd422b"
            android:gravity="center" 
            />
        
        
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/product_price"
            android:textStyle="bold"
            android:textColor="#cd422b"
            android:gravity="center" 
            android:visibility="invisible"
            />        
        
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:id="@+id/ll_list_payment_container"
            >
            
            
            
        </LinearLayout>
    </ScrollView>
    
    
    

</LinearLayout>
