<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:textColor="#d14129"
            android:text="@string/dashboard_addmoney_telco" 
            android:textSize="12dp"
            android:padding="5dp"
            android:textStyle="bold"
            />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edittext"
            android:text="Telco"
            android:textSize="12dp"
            android:id="@+id/tv_telco"
            android:drawableRight="@drawable/ic_arrow_down"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="#000"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:textColor="#d14129"
            android:text="@string/dashboard_addmoney_pin" 
            android:textSize="12dp"
            android:padding="5dp"
            android:textStyle="bold"
            />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edittext"
            android:textSize="12dp"
            android:id="@+id/tv_pin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"     
            android:textColor="#000"       
            />
    </LinearLayout>  
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:textColor="#d14129"
            android:text="@string/dashboard_addmoney_serial" 
            android:textSize="12dp"
            android:padding="5dp"
            android:textStyle="bold"
            />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edittext"
            android:textSize="12dp"
            android:id="@+id/tv_serial"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"   
            android:textColor="#000"   
            android:inputType="number"      
            />
    </LinearLayout>     
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="3"
        android:gravity="center"
        >
        
        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" 
            android:background="@drawable/bg_login_button"
            android:text="@string/dashboard_addmoney_confirm"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:padding="10dp"
            android:id="@+id/btn_confirm"
            />
        
    </LinearLayout>
    
    

</LinearLayout>
