<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/tab_account_username"
            android:textColor="#d14129"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username_fb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0000"
            android:drawableRight="@drawable/ic_editable"
            android:editable="true"
            android:gravity="center_vertical"
            android:hint="@string/tab_account_username"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/tab_account_password"
            android:textColor="#d14129"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password_fb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0000"
            android:drawableRight="@drawable/ic_editable"
            android:editable="true"
            android:gravity="center_vertical"
            android:hint="@string/tab_account_password"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_update_account_fb"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_button"
            android:text="@string/tab_account_update"
            android:textColor="#fff"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>