<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tv_login_sologame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_form"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_login_sologame"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/login_with_sologame"
            android:textColor="#878787"
            android:lines="1" 
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_form"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_login_facebook"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/login_with_facebook"
            android:textColor="#878787"
            android:id="@+id/tv_login_with_facebook"
            android:lines="1"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:gravity="center" 
        >

<!--         <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_form"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_login_google"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/login_with_google"
            android:textColor="#878787"
            android:id="@+id/tv_login_with_google" 
            android:lines="1"
            android:visibility="gone"
            /> -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_form"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register_account"
            android:textColor="#c34421"
            android:id="@+id/tv_register_account"
            android:minHeight="80dp"
            />
    </LinearLayout>

</LinearLayout>